--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -13,7 +13,8 @@ jobs:
         steps: 
             - uses: actions/checkout@v3
             - uses: gautamkrishnar/blog-post-workflow@master
-              with: 
+              with:
+                readme_path: ./readme.md
                 max_post_count: "5"
                 feed_list: "https://lyh543.github.io/feed.atom"
             # - uses: stefanzweifel/git-auto-commit-action@v4
